--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Graphic Design Business</title>
+    <title>Lemoh Graphics</title>
     <link rel="shortcut icon" href="assets/images/lemohbrand/lg logo icon.ico" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/custom.css">
     <link rel="stylesheet" href="assets/css/styles.css">
